# mcp-and-adk

./: .env  README.md  pyproject.toml  server.py
adk-agent/: agent.py
